--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1473,7 +1473,7 @@
   border-bottom: 0 !important;
 }
 .theme-dark .form-control {
-  background-color: #333 !important;
+  background-color: #f4eeee !important;
   border-color: var(--theme-color);
 }
 .theme-dark .dropdown-menu-settings:after {
