--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -283,6 +283,14 @@
   background-color: #f7f9fd !important;
 }
 
+.bg-odin1 {
+  background-color: rgb(47, 72, 111)  !important;
+}
+
+.bg-odin2 {
+  background-color: #0d055b  !important;
+}
+
 .bg-lightgreen {
   background-color: #f2faf6 !important;
 }
