--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,12 @@
 @import 'tailwindcss/utilities'; 
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
-
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+@layer base {
+  html {
+    font-family: "Sora", system-ui, sans-serif;
+  }
+}
 
 .expand {
   transition: all 1s ease-in-out; /* Adjust timing and easing as needed */
