--- a/src/main.scss
+++ b/src/main.scss
@@ -6,7 +6,7 @@
 @import "~slick-carousel/slick/slick-theme.css";
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
 @layer base {
-  html {
+  html , * {
     font-family: "Sora", system-ui, sans-serif;
   }
 }
