--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12573,6 +12573,7 @@ strong,
   .nav-header .nav-top {
     position: relative;
     width: 100%;
+    padding: 0;
   }
 }
 .nav-header .nav-top a {
