--- a/src/main.scss
+++ b/src/main.scss
@@ -4,6 +4,7 @@
 @import 'tailwindcss/utilities'; 
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+@import "./fixDesign.scss";
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
 @layer base {
   html , * {
