--- a/src/fixDesign.scss
+++ b/src/fixDesign.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     flex-direction: row;
     border-radius: 10px;
+    padding: 0 5px;
     cursor: pointer;
     transition: .2s;
     &:hover {
@@ -24,15 +25,13 @@
 
   .togglerCon {
     position: absolute;
-    bottom: -30px;
-    width: 80px;
+    width: 100px;
     height: fit-content;
     background-color: #ffffff;
     border-radius: 5px;
     z-index: 111;
     display: flex;
-    bottom: -150%;
-    display: flex;
+    bottom: -60%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -45,6 +44,13 @@
       border-radius: 3px;
       transition: .2s;
       padding: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      svg {
+        margin-right: 5px;
+        min-width: 20px;
+      }
       cursor: pointer;
       width: 90%;
       &:hover {
