fixingdark mode &page offre v 3 &  post image aspect

--- a/src/main.scss
+++ b/src/main.scss
@@ -22,8 +22,7 @@
 
 body {
   scroll-behavior: auto;
-  --tw-bg-opacity: 1;
-  background-color: rgb(244 244 245 / var(--tw-bg-opacity));
+  background-color: rgb(244 ,244 ,245 );
 }
 .expand {
   transition: all 1s ease-in-out; /* Adjust timing and easing as needed */
