--- a/src/main.scss
+++ b/src/main.scss
@@ -22,7 +22,7 @@
 
 body {
   scroll-behavior: auto;
-  background-color: rgb(244 ,244 ,245 );
+  background-color: #e5e7eb;
 }
 .expand {
   transition: all 1s ease-in-out; /* Adjust timing and easing as needed */
