--- a/src/fixDesign.scss
+++ b/src/fixDesign.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   position: relative;
+
   .currentLangCon {
     display: flex;
     align-items: center;
@@ -13,9 +14,11 @@
     padding: 0 5px;
     cursor: pointer;
     transition: 0.2s;
+
     &:hover {
       background-color: #ffffff30;
     }
+
     span {
       color: white;
       font-weight: bold;
@@ -40,6 +43,7 @@
     display: none;
     box-shadow: 0 0 0 1px #11111120;
     padding: 6px;
+
     label {
       margin: 2px 2px;
       border-radius: 8px;
@@ -56,12 +60,15 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
+
       img {
         width: 20px;
         height: 20px;
       }
+
       cursor: pointer;
       width: 90%;
+
       &:hover {
         background-color: #1d4db740;
       }
@@ -79,6 +86,7 @@
   border-radius: 10px;
   transition: 0.2s;
   cursor: pointer;
+
   &:hover {
     background-color: #ffffff30;
   }
@@ -86,6 +94,7 @@
 
 .socialMediaIcon {
   cursor: pointer;
+
   &:hover {
     transition: 0.2s;
     filter: invert(1);
@@ -96,6 +105,7 @@
   cursor: pointer;
   transition: 0.3s;
   color: white !important;
+
   &:hover {
     background-color: white !important;
     color: #333 !important;
@@ -107,6 +117,7 @@
   transition: 0.3s;
   color: #2563eb !important;
   border: 1px solid #2563eb;
+
   &:hover,
   &:focus {
     background-color: #2563eb !important;
@@ -134,6 +145,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
   .animatedImageContainer {
     transform: scale(1.4);
     padding-left: 8px;
@@ -147,6 +159,7 @@
       z-index: 10;
       margin-bottom: 15px;
     }
+
     .textContent {
       display: flex;
       flex-direction: column;
@@ -155,11 +168,14 @@
       color: #333;
       opacity: 0;
     }
+
     margin-bottom: 20px;
   }
+
   .odinloader {
     width: 120px;
     height: 5px;
+
     // background-color: #e8e8e8;
     .inner {
       height: 100%;
@@ -181,6 +197,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   section {
     height: 80%;
     border: 10px solid #2563eb;
@@ -197,6 +214,7 @@
         width: 15px;
         filter: invert(1);
         cursor: pointer;
+
         &:hover {
           transform: scale(1.3);
         }
@@ -208,9 +226,11 @@
       position: relative;
       overflow-y: scroll;
       background-color: white;
+
       p {
         text-align: start;
         padding-left: 10px;
+
         text-indent: -5px pre {
           text-align: start;
         }
@@ -220,25 +240,23 @@
 }
 
 
-.allyearsContainerPopUp {
-
-}
+.allyearsContainerPopUp {}
 
 
 .hiddenScrollRightMenu::-webkit-scrollbar {
 
-  width: 3px;
+  width: 6px;
 }
 
 
 .hiddenScrollRightMenu::-webkit-scrollbar-thumb {
-width: 3px;
-background-color: #aaa;
+  width: 6px;
+  background-color: #aaa;
 
 }
 
 
 .hiddenScrollRightMenu::-webkit-scrollbar-track {
-  width: 3px;
+  width: 6px;
 
 }
