fix perfermance all front and backend

--- a/src/main.scss
+++ b/src/main.scss
@@ -22,7 +22,7 @@
 
 body {
   scroll-behavior: auto;
-  background-color: #e5e7eb;
+  background-color: #F4F4F5;
 }
 .expand {
   transition: all 1s ease-in-out; /* Adjust timing and easing as needed */
