--- a/src/fixDesign.scss
+++ b/src/fixDesign.scss
@@ -280,5 +280,16 @@
 .hiddenScrollLeftMenu::-webkit-scrollbar-track {
   width: 6px;
   opacity: 0;
+ 
+}
 
+.slideMenuBtn {
+  padding: 2px 4px !important  ;
+  min-width: fit-content;
+  &:hover {
+    cursor: pointer;
+    color: #fff;
+    background-color: #ffffff50;
+    border-radius: 10px;
+  }
 }
