fix partage post and ui code login

--- a/src/main.scss
+++ b/src/main.scss
@@ -22,7 +22,7 @@
 
 body {
   scroll-behavior: auto;
-  background-color: #F4F4F5;
+	background-color: rgb(226 232 240);
 }
 .expand {
   transition: all 1s ease-in-out; /* Adjust timing and easing as needed */
