--- a/src/main.scss
+++ b/src/main.scss
@@ -126,3 +126,79 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+/* Swiper container */
+.mySwiper {
+  width: 100%;
+  height: 100%;
+}
+
+/* Image container */
+.imageswiper-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+/* Image styling */
+.imageswiper {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+
+/* Fixed height and width for images */
+.imageswiper-container {
+  width: 500px; /* Adjust as needed */
+  height: 600px; /* Adjust as needed */
+}
+
+/* Hide navigation arrows on mobile */
+@media (max-width: 767px) {
+  .image {
+    width: 70%;  /* Ensure image takes full width on mobile */
+    height: auto;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: none;
+  };
+}
+
+/* Optional: Style for the modal close button */
+.absolute {
+  position: absolute;
+}
+.bottom-6 {
+  bottom: 1.5rem;
+}
+.right-11 {
+  right: 2.75rem;
+}
+.opacity-0 {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.opacity-0:hover {
+  opacity: 1;
+}
+.w-36 {
+  width: 9rem;
+}
+.h-10 {
+  height: 2.5rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.text-white {
+  color: white;
+}
+.rounded-full {
+  border-radius: 9999px;
+}
