fixSlideMenu & toggling between not Nd slideMenu & header2 components

--- a/src/fixDesign.scss
+++ b/src/fixDesign.scss
@@ -306,13 +306,26 @@
 }
 
 .slideMenuBtn {
-  padding: 2px 4px !important  ;
-  min-width: fit-content;
+flex: 1;
+  width: 90%;
+  @include flexrow();
+  transition: .4s;
+  border-bottom: 1px solid #ffffff50;
+  
   &:hover {
     cursor: pointer;
     color: #fff;
     background-color: #ffffff50;
     border-radius: 10px;
+  }
+  &.logoutBtn {
+    border: none;
+  transition: .4s;
+    border-radius: 10px;
+   &:hover {
+  background-color: #FF7F00cc;
+
+   }
   }
 }
 
