--- a/src/fixDesign.scss
+++ b/src/fixDesign.scss
@@ -293,7 +293,7 @@
 
 .hiddenScrollLeftMenu::-webkit-scrollbar-thumb {
   width: 6px;
-  background-color: rgb(244 244 245);
+  background-color: #aaa;
   opacity: 0;
 
 }
