--- a/src/fixDesign.scss
+++ b/src/fixDesign.scss
@@ -310,6 +310,7 @@ flex: 1;
   width: 100%;
   @include flexrow();
   transition: .4s;
+  justify-content: flex-start;
   // border-bottom: 1px solid #ffffff50;
   
  
