--- a/src/pages/PP/ProfessionalProle3.scss
+++ b/src/pages/PP/ProfessionalProle3.scss
@@ -133,7 +133,7 @@
 
         .statContainer {
             width: 45%;
-
+background: linear-gradient(52deg, #2E71EB 0.06%, #3C8AF5 33.22%, #1E56D7 66.37%, #305FDC 99.53%);
             @media screen and (max-width: 900px) {
                 width: 100%;
 
