--- a/src/pages/PP/ProfessionalProle3.scss
+++ b/src/pages/PP/ProfessionalProle3.scss
@@ -5,6 +5,7 @@
     display: flex;
     gap: 15px;
     flex-direction: column;
+
     @media screen and (max-width: 800px) {
         padding: 20px;
 
@@ -17,6 +18,7 @@
         height: fit-content;
         gap: 15px;
         height: 300px;
+
         @media screen and (max-width: 900px) {
             flex-direction: column;
             height: fit-content;
@@ -31,29 +33,32 @@
             overflow: hidden;
         }
 
-        .seperateCon {  
+        .seperateCon {
             width: 55%;
             display: flex;
             flex-direction: row;
             gap: 15px;
+
             @media screen and (max-width: 900px) {
                 width: 100%;
                 height: 400px;
             }
+
             @media screen and (max-width: 500px) {
                 flex-direction: column;
                 width: 100%;
                 height: fit-content;
 
             }
-            
-          
+
+
             .personalDetailCon {
                 width: 350px;
 
                 @media screen and (max-width: 900px) {
                     width: 100%;
                     max-width: 320px;
+                    margin: 0 auto;
                 }
 
                 .personalImage {
@@ -114,16 +119,17 @@
             .starsContainer {
                 width: 100%;
                 height: 100%;
-          
-            
+
+
                 @media screen and (max-width: 900px) {
                     width: 100%;
                     height: 100%;
                 }
-                  @media screen and (max-width: 500px) {
+
+                @media screen and (max-width: 500px) {
                     height: 70vw;
 
-            }
+                }
 
             }
         }
@@ -133,7 +139,8 @@
 
         .statContainer {
             width: 45%;
-background: linear-gradient(52deg, #2E71EB 0.06%, #3C8AF5 33.22%, #1E56D7 66.37%, #305FDC 99.53%);
+            background: linear-gradient(52deg, #2E71EB 0.06%, #3C8AF5 33.22%, #1E56D7 66.37%, #305FDC 99.53%);
+
             @media screen and (max-width: 900px) {
                 width: 100%;
 
@@ -148,20 +155,22 @@ background: linear-gradient(52deg, #2E71EB 0.06%, #3C8AF5 33.22%, #1E56D7 66.37%
 
         nav {
             width: 100%;
-           
-                    overflow-x: scroll;
-                    @media screen and (max-width: 640px) {
-            padding-bottom: 12px;
 
-                    }   
+            overflow-x: scroll;
+
+            @media screen and (max-width: 640px) {
+                padding-bottom: 12px;
+
+            }
+
             ul {
                 width: 100%;
-            min-width: 640px;
+                min-width: 640px;
 
                 display: flex;
                 flex-direction: row;
                 gap: 20px;
-               
+
                 li {
                     flex: 1;
                     text-align: center;
@@ -183,13 +192,14 @@ background: linear-gradient(52deg, #2E71EB 0.06%, #3C8AF5 33.22%, #1E56D7 66.37%
 
         main {
             margin-top: 20px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
 
             >div {
 
-                background-color: white;
                 width: 100%;
-                border-radius: 10px;
-                padding: 20px 10px;
+
 
                 h1 {
 
@@ -197,6 +207,40 @@ background: linear-gradient(52deg, #2E71EB 0.06%, #3C8AF5 33.22%, #1E56D7 66.37%
                     margin-bottom: 15px;
                     font-size: 18px;
                 }
+
+                .ExercideNdValueCon {
+                justify-content: space-between;
+                margin-top: 10px;
+                    display: flex;
+                }
+
+                .barCon {
+                    margin-top: 10px;
+                    width: 100%;
+                    border-radius: 20px;
+                    height: 4px;
+                    background-color: #D9D9D9;
+                    display: flex;
+                    align-items: center;
+
+                    .progressBar {
+                        width: 0;
+                        height: 120%;
+                        border-radius: 20px;
+                        background-color: red;
+                        animation: toValue .7s ease-in ;
+                        @keyframes toValue {
+                            to {
+                                width: var(to-val);
+
+                            }
+                        }
+                    }
+
+
+                }
+
+
             }
         }
     }
@@ -205,7 +249,7 @@ background: linear-gradient(52deg, #2E71EB 0.06%, #3C8AF5 33.22%, #1E56D7 66.37%
         background-color: white;
         width: 100%;
         border-radius: 10px;
-        padding: 20px 10px;
+        padding: 20px;
 
         h1 {
             font-weight: bold;
