--- a/src/pages/PP/ProfessionalProle3.scss
+++ b/src/pages/PP/ProfessionalProle3.scss
@@ -1,378 +1,393 @@
 .profesionalProfileContainer {
+  width: 100%;
+  padding: 40px;
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
 
-    width: 100%;
-    padding: 40px;
+  @media screen and (max-width: 800px) {
+    padding: 20px;
+  }
+
+  .aboveContainer {
     display: flex;
+    flex-direction: row;
+    height: fit-content;
     gap: 15px;
-    flex-direction: column;
+    height: 300px;
 
-    @media screen and (max-width: 800px) {
-        padding: 20px;
-
+    @media screen and (max-width: 900px) {
+      flex-direction: column;
+      height: fit-content;
     }
 
+    .con {
+      background-color: white;
+      height: 100%;
+      border-radius: 10px;
+      overflow: hidden;
+    }
 
-    .aboveContainer {
-        display: flex;
-        flex-direction: row;
-        height: fit-content;
-        gap: 15px;
+    .seperateCon {
+      width: 55%;
+      display: flex;
+      flex-direction: row;
+      gap: 15px;
+
+      @media screen and (max-width: 900px) {
+        width: 100%;
         height: 300px;
+      }
+
+      @media screen and (max-width: 500px) {
+        flex-direction: column;
+        width: 100%;
+        height: fit-content;
+      }
+
+      .personalDetailCon {
+        width: 350px;
 
         @media screen and (max-width: 900px) {
-            flex-direction: column;
-            height: fit-content;
+          width: 100%;
+          max-width: 250px;
+          margin: 0 auto;
+        }
+        @media screen and (max-width: 500px) {
+            width: 100%;
+            max-width: 100%;
+            max-height: 350px;
+            margin: 0 auto;
+          }
 
+
+        .personalImage {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
 
+        position: relative;
 
-        .con {
+        .infoCon {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          background: linear-gradient(
+            180deg,
+            rgba(46, 113, 235, 0) 50.5%,
+            #2e71eb 86.5%
+          );
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          flex-direction: column;
+          padding-bottom: 20px;
+
+          .star {
+            width: 45px;
+          }
+
+          .playerName {
+            color: white;
+            text-transform: uppercase;
+            font-weight: bold;
+            margin-bottom: -8px;
+            text-align: center;
+          }
+
+          .playerNickName {
+            color: white;
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 20px;
+            text-align: center;
+          }
+
+          .positionCon {
+            margin-top: 5px;
             background-color: white;
-            height: 100%;
-            border-radius: 10px;
-            overflow: hidden;
+            padding: 2px 10px;
+            border-radius: 20px;
+            width: fit-content;
+            font-size: 0.75em;
+            font-weight: bold;
+          }
+        }
+      }
+
+      .starsNdWheelContainer {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        .wheel {
+            position: relative;
+            
+            width: 200px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .Detail {
+            position: absolute;
+
+            p {
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+                color: #0A0615;
+                &:first-of-type {
+                    font-weight: 600;
+                    font-size: calc(12px + 1.6vw);
+                }
+
+                &:last-of-type {
+                    font-weight: 300;
+                    margin-top: 5px;
+                    font-size: calc(12px + .6vw);
+
+
+                }
+            }
+        }
+        .point {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+        .round {
+          transform: rotate(-90deg);
+          transition: all 1s ease-in-out;
+            transform: rotate(0deg);
+          /* SVG */
+          fill: none;
+          stroke:  #2E71EB;
+          stroke-width: 8;
+          stroke-linecap: round;
+          // stroke-dasharray: 0 999;
+        }
         }
 
-        .seperateCon {
-            width: 55%;
+       
+        .StarsPercentageCon {
+          // star width with margin 3px horizontol * 5
+          width: calc(31px * 5);
+          height: 30px;
+          margin: 20px auto;
+          > div {
             display: flex;
             flex-direction: row;
-            gap: 15px;
+            position: absolute;
+          }
+          position: relative;
+          .starsWrapperCon {
 
-            @media screen and (max-width: 900px) {
+            img {
+              width: 25px;
+              margin: 0 3px;
+            }
+          }
+          .starsFilledWrapperCon {
+            overflow: hidden;
+            width: 0%;
+
+            animation: toFullStars 2s forwards ease-in-out;
+            animation-delay: 0.5s;
+            @keyframes toFullStars {
+              to {
                 width: 100%;
-                height: 400px;
+              }
             }
-
-            @media screen and (max-width: 500px) {
-                flex-direction: column;
-                width: 100%;
-                height: fit-content;
-
+            .inner {
+              display: flex;
+              img {
+                width: 25px;
+                margin: 0 3px;
+              }
             }
-
-
-            .personalDetailCon {
-                width: 350px;
-
-                @media screen and (max-width: 900px) {
-                    width: 100%;
-                    max-width: 320px;
-                    margin: 0 auto;
-                }
-
-                .personalImage {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-
-                position: relative;
-
-                .infoCon {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    height: 100%;
-                    width: 100%;
-                    background: linear-gradient(180deg, rgba(46, 113, 235, 0.00) 50.5%, #2E71EB 86.5%);
-                    display: flex;
-                    align-items: center;
-                    justify-content: flex-end;
-                    flex-direction: column;
-                    padding-bottom: 20px;
-
-                    .star {
-                        width: 45px;
-                    }
-
-                    .playerName {
-                        color: white;
-                        text-transform: uppercase;
-                        font-weight: bold;
-                        margin-bottom: -8px;
-                        text-align: center;
-
-                    }
-
-                    .playerNickName {
-                        color: white;
-                        text-transform: uppercase;
-                        font-weight: bold;
-                        font-size: 20px;
-                        text-align: center;
-
-                    }
-
-                    .positionCon {
-                        margin-top: 5px;
-                        background-color: white;
-                        padding: 2px 10px;
-                        border-radius: 20px;
-                        width: fit-content;
-                        font-size: .75em;
-                        font-weight: bold;
-                    }
-                }
-            }
-
-            .starsNdWheelContainer {
-                width: 100%;
-                height: 100%;
-                // display: flex;
-                // // align-items: center;
-                // // justify-content: center;
-                // // flex-direction: column;
-                // .wheelPercentageCon {
-                //     background:  conic-gradient( #2E71EB 0deg 10deg, #F8FAFC 0deg ) ;
-                //     width: 200px;
-
-                //     height: 200px;
-                //     border-radius: 200px;
-                //     display: grid;
-                //     place-items: center;
-                //     .inner {
-                //         width: 90%;
-                //         height: 90%;
-                //         border-radius: 200px;
-                //         background-color: #fff;
-
-                //         display: flex;
-                //         align-items: center;
-                //         justify-content: center;
-                //         flex-direction: column;
-                //         .percVal {
-
-                //             display: flex;
-                //             align-items: center;
-                //             justify-content: center;
-                //             flex-direction: column;
-                //         }
-                //     }
-                // }
-                .StarsPercentageCon {
-                // star width with margin 3px horizontol * 5
-                width: calc(31px * 5);
-                height: 30px;
-                    margin: 0 auto;
-                    > div {
-                        display: flex;
-                        flex-direction: row;
-                    position: absolute;
-
-                    }
-                    position: relative;
-                  .starsWrapperCon {
-                    // background-color: rebeccapurple;
-
-                    img {
-                        width: 25px;
-                        margin: 0 3px;
-                    }
-                  } 
-                  .starsFilledWrapperCon {
-                    overflow: hidden;
-                    max-width: 50%;
-                    img {
-                        width: 25px;
-                        margin: 0 3px;
-                        
-                    }
-                  }
-                }
-
-                @media screen and (max-width: 900px) {
-                    width: 100%;
-                    height: 100%;
-                }
-
-                @media screen and (max-width: 500px) {
-                    height: 70vw;
-
-                }
-
-            }
+          }
         }
 
-
-
-
-        .statContainer {
-            width: 45%;
-            background: linear-gradient(52deg, #2E71EB 0.06%, #3C8AF5 33.22%, #1E56D7 66.37%, #305FDC 99.53%);
-
-            @media screen and (max-width: 900px) {
-                width: 100%;
-
-            }
+        @media screen and (max-width: 900px) {
+          width: 100%;
+          height: 100%;
         }
 
-
+        @media screen and (max-width: 500px) {
+          height: fit-content;
+        }
+      }
     }
 
-    .testValuesContainer {
+    .statContainer {
+      width: 45%;
+      background: linear-gradient(
+        52deg,
+        #2e71eb 0.06%,
+        #3c8af5 33.22%,
+        #1e56d7 66.37%,
+        #305fdc 99.53%
+      );
+
+      @media screen and (max-width: 900px) {
         width: 100%;
+      }
+    }
+  }
 
-        nav {
-            width: 100%;
+  .testValuesContainer {
+    width: 100%;
 
-            overflow-x: scroll;
+    nav {
+      width: 100%;
 
-            @media screen and (max-width: 640px) {
-                padding-bottom: 12px;
+      @media screen and (max-width: 750px) {
+      overflow-x: scroll;
 
+      }
+      @media screen and (max-width: 640px) {
+        padding-bottom: 12px;
+
+      }
+
+      ul {
+        width: 100%;
+        min-width: 640px;
+
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+
+        li {
+          flex: 1;
+          text-align: center;
+          background-color: white;
+          font-weight: 500;
+          padding: 20px 0;
+          border-radius: 5px;
+          transition: 0.5s;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: row;
+          gap: 10px;
+          @media screen and (max-width: 1000px) {
+            flex-direction: column;
+          }
+          svg {
+            background-color: rgb(222, 233, 255);
+            height: 50px;
+            width: 50px;
+            border-radius: 25px;
+            path {
+              transition: 0s;
             }
+          }
 
-            ul {
-                width: 100%;
-                min-width: 640px;
+          &:hover {
+            background-color: rgba(46, 113, 235, 0.8);
+            color: white;
+            svg {
+              background-color: #427fed;
 
-                display: flex;
-                flex-direction: row;
-                gap: 20px;
-
-                li {
-                    flex: 1;
-                    text-align: center;
-                    background-color: white;
-                    font-weight: 500;
-                    padding: 20px 0;
-                    border-radius: 5px;
-                    transition: .5s;
-                    cursor: pointer;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    flex-direction: row;
-                    gap : 10px;
-                    @media screen and (max-width: 1000px) {
-                    flex-direction: column;
-                        
-                    }
-                    svg {
-                        background-color: rgb(222, 233, 255);
-                        height: 50px;
-                        width: 50px;
-                        border-radius: 25px;
-                        path {
-                            transition: 0s;
-
-                        }
-                    }
-                    
-
-                    &:hover {
-                        background-color: rgba(46, 113, 235, 0.80);
-                        color: white;
-                        svg {
-                            background-color: #427fed;
-
-                            path {
-                                fill: white;
-                                stroke: white;
-                            }
-                            
-                        }
-                    }
-
-                    &.active {
-                        background-color: rgb(46, 113, 235);
-                        color: white;
-                        svg {
-                            background-color: #427fed;
-
-                            path {
-                                fill: white;
-                                stroke: white;
-                            }
-                            
-                        }
-
-                    }
-                }
+              path {
+                fill: white;
+                stroke: white;
+              }
             }
+          }
 
+          &.active {
+            background-color: rgb(46, 113, 235);
+            color: white;
+            svg {
+              background-color: #427fed;
+
+              path {
+                fill: white;
+                stroke: white;
+              }
+            }
+          }
         }
-
-        main {
-            margin-top: 20px;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-
-            >div {
-
-                width: 100%;
-
-
-                h1 {
-
-                    font-weight: bold;
-                    margin-bottom: 15px;
-                    font-size: 18px;
-                }
-
-                .ExercideNdValueCon {
-                justify-content: space-between;
-                margin-top: 10px;
-                    display: flex;
-                }
-                .aboveTitleBar {
-                    font-size: 13px;
-                }
-                .testVal {
-                    font-weight: bold;
-                    &.sautVal {
-                        text-align: center;
-                    }
-                }
-
-                .barCon {
-                    margin-top: 5px;
-                    width: 100%;
-                    border-radius: 20px;
-                    height: 4px;
-                    background-color: #D9D9D9;
-                    display: flex;
-                    align-items: center;
-                    .wrapper {
-                        width: 0;
-                        height: 120%;
-                        animation: toValue .9s ease-out  forwards;
-                        @keyframes toValue {
-                         
-                            to {
-                                width:100%;
-
-                            }
-                        }
-                        .progressBar {
-                            height: 100%;
-                            border-radius: 20px;
-                            background-color: red;
-                            
-                        }
-                    }
-
-
-                }
-
-
-            }
-        }
+      }
     }
 
-    .videoContainer {
-        background-color: white;
+    main {
+      margin-top: 20px;
+      padding: 20px;
+      background-color: white;
+      border-radius: 10px;
+
+      > div {
         width: 100%;
-        border-radius: 10px;
-        padding: 20px;
 
         h1 {
-            font-weight: bold;
-            margin-bottom: 15px;
-            font-size: 18px;
+          font-weight: bold;
+          margin-bottom: 15px;
+          font-size: 18px;
         }
-    }
 
+        .ExercideNdValueCon {
+          justify-content: space-between;
+          margin-top: 10px;
+          display: flex;
+        }
+        .aboveTitleBar {
+          font-size: 13px;
+        }
+        .testVal {
+          font-weight: bold;
+          &.sautVal {
+            text-align: center;
+          }
+        }
+
+        .barCon {
+          margin-top: 5px;
+          width: 100%;
+          border-radius: 20px;
+          height: 4px;
+          background-color: #d9d9d9;
+          display: flex;
+          align-items: center;
+          .wrapper {
+            width: 0;
+            height: 120%;
+            animation: toValue 0.9s ease-out forwards;
+            @keyframes toValue {
+              to {
+                width: 100%;
+              }
+            }
+            .progressBar {
+              height: 100%;
+              border-radius: 20px;
+              background-color: red;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .videoContainer {
+    background-color: white;
+    width: 100%;
+    border-radius: 10px;
+    padding: 20px;
+
+    h1 {
+      font-weight: bold;
+      margin-bottom: 15px;
+      font-size: 18px;
+    }
+  }
 }
