--- a/src/pages/PP/ProfessionalProle3.scss
+++ b/src/pages/PP/ProfessionalProle3.scss
@@ -94,8 +94,9 @@
             color: white;
             text-transform: uppercase;
             font-weight: bold;
-            margin-bottom: -8px;
             text-align: center;
+            margin: 0 3px  -8px ;
+
           }
 
           .playerNickName {
@@ -104,6 +105,7 @@
             font-weight: bold;
             font-size: 20px;
             text-align: center;
+            margin: 0 3px;
           }
 
           .positionCon {
@@ -127,7 +129,6 @@
         flex-direction: column;
         .wheel {
             position: relative;
-            
             width: 200px;
             display: flex;
             align-items: center;
@@ -143,14 +144,19 @@
                 color: #0A0615;
                 &:first-of-type {
                     font-weight: 600;
-                    font-size: calc(12px + 1.6vw);
+                    font-size: calc(10px + 1.6vw);
+                    @media screen and (max-width: 500px) {
+                        font-size: 20px;
+                    }
                 }
 
                 &:last-of-type {
                     font-weight: 300;
                     margin-top: 5px;
-                    font-size: calc(12px + .6vw);
-
+                    font-size: calc(10px + .6vw);
+                    @media screen and (max-width: 500px) {
+                        font-size: 16px;
+                    }
 
                 }
             }
@@ -194,6 +200,7 @@
             }
           }
           .starsFilledWrapperCon {
+            
             overflow: hidden;
             width: 0%;
 
@@ -220,13 +227,29 @@
         }
 
         @media screen and (max-width: 500px) {
-          height: fit-content;
+          height: fit;
         }
       }
     }
 
     .statContainer {
       width: 45%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0; 
+      transform: translateY(20px);
+      animation: toAppear .7s forwards; 
+        animation-delay: .5s;
+    @keyframes toAppear {
+        to {
+            opacity: 1;
+            transform: translateY(0);
+
+        }
+    }
+
+
       background: linear-gradient(
         52deg,
         #2e71eb 0.06%,
@@ -237,6 +260,8 @@
 
       @media screen and (max-width: 900px) {
         width: 100%;
+        height: 300px;
+
       }
     }
   }
