--- a/src/pages/PP/ProfessionalProle3.scss
+++ b/src/pages/PP/ProfessionalProle3.scss
@@ -144,7 +144,7 @@
                 color: #0A0615;
                 &:first-of-type {
                     font-weight: 600;
-                    font-size: calc(10px + 1.6vw);
+                    font-size: calc(10px + 1.4vw);
                     @media screen and (max-width: 500px) {
                         font-size: 20px;
                     }
@@ -153,7 +153,7 @@
                 &:last-of-type {
                     font-weight: 300;
                     margin-top: 5px;
-                    font-size: calc(10px + .6vw);
+                    font-size: calc(10px + .4vw);
                     @media screen and (max-width: 500px) {
                         font-size: 16px;
                     }
@@ -294,7 +294,7 @@
           text-align: center;
           background-color: white;
           font-weight: 500;
-          padding: 20px 0;
+          padding: 15px 0;
           border-radius: 5px;
           transition: 0.5s;
           cursor: pointer;
@@ -387,6 +387,7 @@
             width: 0;
             height: 120%;
             animation: toValue 0.9s ease-out forwards;
+            animation-delay: .3s    ;
             @keyframes toValue {
               to {
                 width: 100%;
@@ -413,6 +414,16 @@
       font-weight: bold;
       margin-bottom: 15px;
       font-size: 18px;
+      display: flex;
+      align-items: center;
+
+    }
+
+    img {
+        width: 100%;
+        min-height: 300px;
+        object-fit: cover;
+        border-radius: 10px;
     }
   }
 }
